# GradCtrl

./: README.md  classifiers.py  datasets.py  manipulate.py  manipulator.py  prepare_data.py  pyproject.toml  sample.py  train.py  util_functions.py
dnnlib/tflib/: autosummary.py  custom_ops.py  network.py  tfutil.py
dnnlib/tflib/ops/: upfirdn_2d.py
model_car/: model.pth  model_params.pkl
model_cat/: model.pth  model_params.pkl
stylegan2/: pretrained_networks.py  projector.py
stylegan2/dnnlib/tflib/: custom_ops.py  network.py  tfutil.py
stylegan2/dnnlib/tflib/ops/: fused_bias_act.py
stylegan2/metrics/: frechet_inception_distance.py  inception_score.py  linear_separability.py  metric_base.py  perceptual_path_length.py  precision_recall.py
stylegan2/training/: dataset.py  loss.py  networks_stylegan.py  networks_stylegan2.py  training_loop.py
