[tool.poetry]
name = "gradctrl"
version = "0.1.0"
description = ""
authors = ["cate <catherineseale@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
torch = {url = "https://download.pytorch.org/whl/cu117/torch-1.13.0%2Bcu117-cp39-cp39-linux_x86_64.whl"}
tqdm = "^4.64.1"
Pillow = "^9.2.0"
requests = "^2.28.1"
protobuf = "3.19.*"
tensorflow = "^2.10.0"
cuda-python = "^11.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
